--- a/.github/workflows/vagrant-up.yml
+++ b/.github/workflows/vagrant-up.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   vagrant-up:
-    runs-on: self-hosted
+    runs-on: macos-10.15
 
     steps:
     - uses: actions/checkout@v2
