--- a/.github/workflows/vagrant-up.yml
+++ b/.github/workflows/vagrant-up.yml
@@ -1,14 +1,20 @@
 name: vagrant-up
-
 on: [push]
-
 jobs:
   vagrant-up:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-
+    
+    - name: Install Vagrant
+      run: |
+        wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+        sudo apt-get update && sudo apt-get install -y vagrant
+    
+    - name: Install VirtualBox
+      run: sudo apt-get install -y virtualbox
+      
     - name: Cache Vagrant boxes
       uses: actions/cache@v3
       with:
@@ -16,12 +22,12 @@ jobs:
         key: ${{ runner.os }}-vagrant-${{ hashFiles('Vagrantfile') }}
         restore-keys: |
           ${{ runner.os }}-vagrant-
-
+    
     - name: Show Vagrant version
       run: vagrant --version
-
+    
     - name: Run vagrant up
       run: vagrant up
-
+    
     - name: ssh into box after boot
       run: vagrant ssh -c "echo 'hello world!'"
