--- a/.github/workflows/vagrant-up.yml
+++ b/.github/workflows/vagrant-up.yml
@@ -1,48 +1,90 @@
-name: vagrant-up
-on: 
-  workflow_call: # This allows the workflow to be called from other workflows
-  push: # Keep this to also allow direct triggering
+name: kubernetes-vagrant-cluster
+on: [push]
 
 jobs:
-  vagrant-up:
+  prepare-environment:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
-    - name: Install Vagrant
+    - name: Generate SSH key
       run: |
-        wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-        sudo apt-get update && sudo apt-get install -y vagrant
-    
-    - name: Install VirtualBox
-      run: sudo apt-get install -y virtualbox
-      
-    - name: Install Ansible
-      run: sudo apt-get install -y ansible
-      
-    - name: Cache Vagrant boxes
-      uses: actions/cache@v3
+        mkdir -p ~/.ssh
+        ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
+        chmod 600 ~/.ssh/id_rsa
+        
+    - name: Upload SSH key as artifact
+      uses: actions/upload-artifact@v4
       with:
-        path: ~/.vagrant.d/boxes
-        key: ${{ runner.os }}-vagrant-${{ hashFiles('Vagrantfile') }}
-        restore-keys: |
-          ${{ runner.os }}-vagrant-
+        name: ssh-key
+        path: ~/.ssh/id_rsa
+        
+  run-vagrant:
+    needs: prepare-environment
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
     
-    - name: Show Vagrant version
-      run: vagrant --version
-    
-    - name: Run vagrant up
-      run: vagrant up
-    
-    - name: SSH into nodes
+    - name: Install VirtualBox with proper networking
       run: |
-        if grep -q "k8s-master" Vagrantfile; then
-          # For Kubernetes cluster
-          vagrant ssh k8s-master -c "echo 'Kubernetes master node is up!'"
-          vagrant ssh node-1 -c "echo 'Kubernetes worker node 1 is up!'" || true
-          vagrant ssh node-2 -c "echo 'Kubernetes worker node 2 is up!'" || true
-        else
-          # Default behavior
-          vagrant ssh -c "echo 'hello world!'"
-        fi
+        sudo apt-get update
+        sudo apt-get install -y software-properties-common wget
+        sudo add-apt-repository "deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib"
+        wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -
+        sudo apt-get update
+        sudo apt-get install -y virtualbox-7.0 dkms
+        sudo /sbin/vboxconfig
+        sudo systemctl restart vboxdrv
+        
+        # Clean up any existing host-only networks
+        for iface in $(VBoxManage list hostonlyifs | grep "^Name:" | awk '{print $2}'); do
+          VBoxManage hostonlyif remove $iface || true
+        done
+        
+        # Create a clean host-only network
+        VBoxManage hostonlyif create
+        VBoxManage hostonlyif ipconfig vboxnet0 --ip 192.168.56.1 --netmask 255.255.255.0
+    
+    - name: Install Vagrant with necessary plugins
+      run: |
+        wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+        sudo apt update && sudo apt install -y vagrant
+        
+        # Install required plugins
+        vagrant plugin install vagrant-vbguest
+        vagrant plugin install vagrant-reload
+        
+        # Clean any existing boxes
+        vagrant box remove bento/ubuntu-16.04 --all --force || true
+    
+    - name: Download SSH key artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: ssh-key
+        path: ~/.ssh/
+    
+    - name: Set permissions for SSH key
+      run: chmod 600 ~/.ssh/id_rsa
+    
+    - name: Run Vagrant with proper cleanup
+      run: |
+        # Force destroy any existing VMs
+        vagrant destroy -f || true
+        
+        # Add box with retry
+        for i in {1..3}; do
+          vagrant box add bento/ubuntu-16.04 --provider virtualbox && break || sleep 10
+        done
+        
+        # Run with debug logging and proper cleanup
+        VAGRANT_LOG=debug vagrant up || (vagrant destroy -f && exit 1)
+        
+    - name: Cleanup on failure
+      if: failure()
+      run: |
+        vagrant destroy -f || true
+        sudo pkill -f VBoxHeadless || true
+        for iface in $(VBoxManage list hostonlyifs | grep "^Name:" | awk '{print $2}'); do
+          VBoxManage hostonlyif remove $iface || true
+        done
